import outdent from 'outdent';
import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'.card { color: red; } .button { color: blue; }',
		'.card, .featured { color: red; } .card { color: blue; }',
		'.card, .featured { color: red; } .featured, .card { color: blue; }',
		'.card.featured { color: red; } .featured.card { color: blue; }',
		'.Card { color: red; } .card { color: blue; }',
		String.raw`.u-m\2b { color: red; } .u-m\00002b { color: blue; }`,
		outdent`
			.card { color: red; }
			@media (width > 10px) {
				.card { color: blue; }
			}
		`,
		outdent`
			@media (width > 10px) {
				.card { color: red; }
			}
			@media (width > 20px) {
				.card { color: blue; }
			}
		`,
		outdent`
			@media (width > 10px) and (height > 10px) {
				.card { color: red; }
			}
			@media (height > 10px) and (width > 10px) {
				.card { color: blue; }
			}
		`,
		outdent`
			.parent {
				.child { color: red; }
			}
			.other-parent {
				.child { color: blue; }
			}
		`,
		outdent`
			.parent .child { color: red; }
			.parent {
				& .child { color: blue; }
			}
		`,
		outdent`
			@layer {
				.card { color: red; }
			}
			@layer {
				.card { color: blue; }
			}
		`,
		outdent`
			@keyframes fade {
				from { opacity: 0; }
				from { opacity: 1; }
			}
		`,
		outdent`
			@-webkit-keyframes fade {
				from { opacity: 0; }
				from { opacity: 1; }
			}
		`,
		// Only the legacy pseudo-elements are aliases
		'.a:hover { color: red; } .a:focus { color: blue; }',
		'.a:before { color: red; } .a::after { color: blue; }',
		'.a:first-line { color: red; } .a::first-letter { color: blue; }',
		// Different matching at-rule contexts do not share a selector-context key
		'@media screen { .card { color: red; } } @supports (display: grid) { .card { color: blue; } }',
		'@layer a { .card { color: red; } } @layer b { .card { color: blue; } }',
		'@container sidebar (width > 10px) { .card { color: red; } } @container main (width > 10px) { .card { color: blue; } }',
		// A grouping rule and the top level are separate contexts
		'@media screen { .card { color: red; } } .card { color: blue; }',
		// Nested rules under different parent selectors are separate contexts
		'.a { .b { color: red; } } .c { .b { color: blue; } }',
		// Attribute selector values are case-sensitive
		'a[href="x"] { color: red; } a[href="X"] { color: blue; }',
		// Partially overlapping lists are not duplicates
		'.a, .b { color: red; } .a { color: blue; } .b { color: green; }',
	],
	invalid: [
		'.card { color: red; } .other { color: green; } .card { color: blue; }',
		'a > b { color: red; } a/* comment */>b { color: blue; }',
		'.card, .featured { color: red; } .card,.featured { color: blue; }',
		'.button, .button { padding: 8px; }',
		'a, b, a { color: red; }',
		'a, a, a { color: red; }',
		'a, /* keep */ a { color: red; }',
		'a, a /* keep */, b { color: red; }',
		'a, a /* keep */ { color: red; }',
		outdent`
			a,
			b,
			a { color: red; }
		`,
		outdent`
			@media (width > 10px) {
				.card { color: red; }
			}
			@media(width>10px) {
				.card { color: blue; }
			}
		`,
		outdent`
			@supports (display: grid) {
				.card { color: red; }
			}
			@supports(display:grid) {
				.card { color: blue; }
			}
		`,
		outdent`
			@container card (width > 10px) {
				.card { color: red; }
			}
			@container card (width>10px) {
				.card { color: blue; }
			}
		`,
		outdent`
			@scope (.component) {
				.card { color: red; }
			}
			@scope(.component) {
				.card { color: blue; }
			}
		`,
		outdent`
			@layer components {
				.card { color: red; }
			}
			@layer components {
				.card { color: blue; }
			}
		`,
		outdent`
			@layer {
				.card { color: red; }
				.card { color: blue; }
			}
		`,
		outdent`
			.component {
				.title { color: red; }
			}
			.component {
				.title { color: blue; }
			}
		`,
		outdent`
			@media (width > 10px) {
				.component {
					.title { color: red; }
				}
			}
			@media(width>10px) {
				.component {
					.title { color: blue; }
				}
			}
		`,
		// Legacy single-colon pseudo-elements are aliases of the double-colon syntax
		'.clearfix:after { content: ""; } .clearfix::after { clear: both; }',
		'.a::first-line { color: red; } .a:first-line { color: blue; }',
		'.a:before, .a::before { color: red; }',
		'.a:first-letter, b, .a::first-letter { color: red; }',
		'.a:before, .b { color: red; } .a::before, .b { color: blue; }',
		'.a:AFTER { color: red; } .a::after { color: blue; }',
		'.a::AFTER { color: red; } .a:after { color: blue; }',
		String.raw`.a:\61 fter { color: red; } .a::after { color: blue; }`,
		// Insignificant whitespace is normalized when comparing selector lists
		'a  b { color: red; } a b { color: blue; }',
		'a > b, c > d { color: red; } a>b, c>d { color: blue; }',
		':where(.a,.b) { color: red; } :where(.a, .b) { color: blue; }',
		// Multiple duplicate selectors in one list are all reported and removed
		'a, a, b, b { color: red; }',
		'.a, .a, .a, .a { }',
		'foo bar, foo bar { color: red; }',
		'*, * { color: red; }',
		':root, :root { color: red; }',
		// A duplicate that is not adjacent to its first occurrence
		'.a, .b, .c, .a { color: red; }',
		'a, b { } a, b, a { }',
		// Escaped class names with the same source text
		String.raw`.foo\:bar { color: red; } .foo\:bar { color: blue; }`,
		// Duplicate selector lists inside grouping and nested rules
		'@supports (display: grid) { .card { color: red; } .card { color: blue; } }',
		'.parent { & .child { color: red; } & .child { color: blue; } }',
		'.parent { & .child, & .child { color: red; } }',
		'.a { color: red; } .a { color: blue; } .a { color: green; }',
		// Separators may span lines
		'a\n,a { color: red; }',
	],
});

test({
	valid: [
		// `@\6b eyframes` is the same at-rule as `@keyframes`, so keyframe selectors are still ignored
		String.raw`@\6b eyframes fade { 0%, 0% {} }`,
		String.raw`@\6B\65 YFRAMES fade { 0%, 0% {} }`,
		String.raw`@-webkit-\6b eyframes fade { 0%, 0% {} }`,
	],
	invalid: [
		{
			code: 'a, b, a, b { color: red; }',
			output: 'a, b { color: red; }',
			errors: 2,
		},
		{
			code: 'a /* keep */, b, a { color: red; }',
			output: 'a /* keep */, b { color: red; }',
			errors: 1,
		},
		{
			code: 'a, /* keep */ a, b, b { color: red; }',
			output: 'a, /* keep */ a, b { color: red; }',
			errors: 2,
		},
		{
			code: '@\\6d edia screen { .card { color: red; } }\n@media screen { .card { color: blue; } }',
			errors: 1,
		},
		{
			code: '@\\6c ayer base { .card { color: red; } }\n@layer base { .card { color: blue; } }',
			errors: 1,
		},
	],
});
